--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,9 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <include src="./partials/todo-list.html"></include>
+    <include src="./partials/todo-archive.html"></include>
+    <!-- <include src="./partials/modal.html"></include> -->
+    <script src="./js/index.js"></script>
   </body>
 </html>
