--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <body>
     <include src="./partials/todo-list.html"></include>
     <include src="./partials/todo-archive.html"></include>
+    <include src="./partials/modal.html"></include>
     <!-- <include src="./partials/modal.html"></include> -->
     <script src="./js/index.js"></script>
   </body>
