archive modal created

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
   <body>
     <include src="./partials/todo-list.html"></include>
     <include src="./partials/todo-archive.html"></include>
-    <include src="./partials/modal.html"></include>
-    <!-- <include src="./partials/modal.html"></include> -->
+    <include src="./partials/todo-modal.html"></include>
+    <include src="./partials/archive-modal.html"></include>
+    
     <script src="./js/index.js"></script>
   </body>
 </html>
