edit function added

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <body>
     <include src="./partials/todo-list.html"></include>
     <include src="./partials/summary.html"></include>
+    <include src="./partials/edit-modal.html"></include>
     <include src="./partials/todo-modal.html"></include>
     <include src="./partials/archive-modal.html"></include>
     
