--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
     <include src="./partials/todo-modal.html"></include>
     <include src="./partials/archive-modal.html"></include>
     
-    <script src="./js/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
