--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -20,7 +22,7 @@
     <include src="./partials/edit-modal.html"></include>
     <include src="./partials/todo-modal.html"></include>
     <include src="./partials/archive-modal.html"></include>
-    
-    <script src="./index.js"></script>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
